tests/negative/m34_incompatible_global.c
int shared_value;
char shared_value;
int main(void) { return 0; }
